@@ -97,6 +97,214 @@ PyObject* getEigenpair(dolfin::PETScVector& rr, dolfin::PETScVector& cc, const i
   BlockMatrix.__setitem__ = BlockMatrix_set
 %}
 
+%define GET_VEC_ITEM_MACRO(VEC_TYPE,RETURN_VEC_TYPE)
+%extend dolfin::VEC_TYPE 
+{
+  // Get item for single index
+  double __getitem__(int index) {
+    if (index >= static_cast<int>(self->size()) or 
+	index < -static_cast<int>(self->size()))
+      throw std::runtime_error("index out of range");
+    if (index < 0)
+      index += self->size();
+    return self->getitem(index);
+  }
+  
+  // Get item for single index
+  RETURN_VEC_TYPE* __getitem__(PyObject* op) {
+    //Check first for None
+    if (op == Py_None)
+      throw std::runtime_error("provide a sequence or slice");
+    
+    // If it is a slice
+    if (PySlice_Check(op)){
+      Py_ssize_t length(self->size());
+      Py_ssize_t start, stop, step, slice_length;
+      if (PySlice_GetIndicesEx((PySliceObject*)op, length, &start, &stop, &step, &slice_length)<0)
+	throw std::runtime_error("invalid slice");
+      
+      // Create the Vector
+      RETURN_VEC_TYPE * return_vec = new RETURN_VEC_TYPE(static_cast<dolfin::uint>(slice_length));
+      dolfin::uint j = static_cast<dolfin::uint>(start);
+      for (dolfin::uint i=0; i<static_cast<dolfin::uint>(slice_length); i++){
+	return_vec->setitem(i,self->getitem(j));
+	j += step;
+      }
+      return return_vec;
+    }
+    
+    // If it is a sequence
+    if (!PyList_Check(op))
+      throw std::runtime_error("index must be either an int, a slice or a list");
+    
+    // An initial check of the length of sequence
+    int seq_length = PySequence_Length(op);
+    int size_of_me = self->size();
+    if ( seq_length > size_of_me )
+      throw std::runtime_error("the length of the sequence must be smaller than the Vector");
+    
+    // Create the Vector
+    RETURN_VEC_TYPE * return_vec = new RETURN_VEC_TYPE(seq_length);
+    PyObject *op1=NULL;
+    long index;
+    for (dolfin::uint i = 0; i < static_cast<dolfin::uint>(seq_length); i++){
+      if (!(op1=PySequence_GetItem(op, i))) {
+	delete return_vec;
+	throw std::runtime_error("invalid index");
+      }
+      
+      // Check for int
+      if (!PyInt_Check(op1)){
+	delete return_vec;
+	throw std::runtime_error("invalid index, must be int");
+      }
+
+      // Convert to long and check sign of index and 
+      // decrease refernce on python index
+      index = PyInt_AsLong(op1);
+      if (index >= static_cast<int>(self->size()) or 
+	  index < -static_cast<int>(self->size()))
+	throw std::runtime_error("index out of range");
+      if (index < 0)
+	index += self->size();
+      Py_DECREF(op1);
+	
+      // Assign the vector element
+      return_vec->setitem(i,self->getitem(static_cast<dolfin::uint>(index)));
+    }
+    return return_vec;
+  } 	      
+
+  void __setitem__(PyObject* op, const dolfin::GenericVector &values) {
+    //Check first for None
+    if (op == Py_None){
+      throw std::runtime_error("provide a sequence or slice as index");
+    }
+    
+    // Check for int
+    if (PyInt_Check(op))
+      throw std::runtime_error("cannot broadcast vector to a single index");
+	
+    // If it is a slice
+    if (PySlice_Check(op)){
+      Py_ssize_t length(self->size());
+      Py_ssize_t start, stop, step, slice_length;
+      if (PySlice_GetIndicesEx((PySliceObject*)op, length, &start, &stop, &step, &slice_length)<0)
+	throw std::runtime_error("invalid slice");
+      if (static_cast<dolfin::uint>(slice_length) != values.size())
+	throw std::runtime_error("non matching dimensions on input");
+      dolfin::uint j = static_cast<dolfin::uint>(start);
+      for (dolfin::uint i=0; i<static_cast<dolfin::uint>(slice_length); i++){
+	self->setitem(j,values.getitem(i));
+	j += step;
+      }
+    }
+    
+    // If it is a List
+    else if (PyList_Check(op)) {
+      // An initial check of the length of sequence
+      dolfin::uint seq_length = static_cast<dolfin::uint>(PySequence_Length(op));
+      if ( seq_length != values.size() ) 
+	throw std::runtime_error("non matching dimensions on input");
+      if ( seq_length > self->size())
+	throw std::runtime_error("too large index");
+
+      PyObject *op1=NULL;
+      long index;
+      for (dolfin::uint i = 0; i < seq_length; i++){
+	if (!(op1=PySequence_GetItem(op, i)))
+	  throw std::runtime_error("invalid index");
+	
+      	// Check for int
+	if (!PyInt_Check(op1))
+	  throw std::runtime_error("invalid index, must be int");
+	
+	// Convert to long and check sign of index and 
+	// decrease refernce on python index
+	index = PyInt_AsLong(op1);
+	if (index >= static_cast<int>(self->size()) or 
+	    index < -static_cast<int>(self->size()))
+	  throw std::runtime_error("index out of range");
+	if (index < 0)
+	  index += self->size();
+	Py_DECREF(op1);
+	
+	// Assign the vector element
+	self->setitem(index,values.getitem(static_cast<dolfin::uint>(i)));
+      }
+    }
+    else
+      throw std::runtime_error("index must be either an int, a slice or a list");
+  }
+
+  void __setitem__(PyObject* op, double value) {
+    //Check first for None
+    if (op == Py_None){
+      throw std::runtime_error("provide a sequence, int or slice as index");
+    }
+
+    // If the index is a single int
+    if (PyInt_Check(op)){
+      long index = PyInt_AsLong(op);
+      if (index >= static_cast<int>(self->size()) or 
+	  index < -static_cast<int>(self->size()))
+	throw std::runtime_error("index out of range");
+      if (index < 0)
+	index += self->size();
+      self->setitem(index, value);
+    }
+      
+    // If it is a slice
+    else if (PySlice_Check(op)){
+      Py_ssize_t length(self->size());
+      Py_ssize_t start, stop, step, slice_length;
+      if (PySlice_GetIndicesEx((PySliceObject*)op, length, &start, &stop, &step, &slice_length)<0)
+	throw std::runtime_error("invalid slice");
+      dolfin::uint j = static_cast<dolfin::uint>(start);
+      for (dolfin::uint i=0; i<static_cast<dolfin::uint>(slice_length); i++){
+	self->setitem(j,value);
+	j += step;
+      }
+    }
+      
+    // If it is a List
+    else if (PyList_Check(op)) {
+      
+      // An initial check of the length of sequence
+      dolfin::uint seq_length = static_cast<dolfin::uint>(PySequence_Length(op));
+      if ( seq_length > self->size())
+	throw std::runtime_error("too large index");
+      
+      PyObject *op1=NULL;
+      long index;
+      for (dolfin::uint i = 0; i < seq_length; i++){
+	if (!(op1=PySequence_GetItem(op, i)))
+	  throw std::runtime_error("invalid index");
+	
+      	// Check for int
+	if (!PyInt_Check(op1))
+	  throw std::runtime_error("invalid index, must be int");
+	
+	// Convert to long and check sign of index and 
+	// decrease refernce on python index
+	index = PyInt_AsLong(op1);
+	if (index >= static_cast<int>(self->size()) or 
+	    index < -static_cast<int>(self->size()))
+	  throw std::runtime_error("index out of range");
+	if (index < 0)
+	  index += self->size();
+	Py_DECREF(op1);
+	    
+	// Assign the vector element
+	self->setitem(index,value);
+      }
+    }
+    else
+      throw std::runtime_error("index must be either an int, a slice or a list");
+  }
+}
+%enddef
+
 // Vector la interface macro
 %define LA_POST_VEC_INTERFACE(VEC_TYPE)
 %extend dolfin::VEC_TYPE
@@ -105,7 +313,7 @@ PyObject* getEigenpair(dolfin::PETScVector& rr, dolfin::PETScVector& cc, const i
   {
     (*self)*=a;
   }
-
+  
   %pythoncode
   %{
     def __is_compatibable(self,other):
@@ -423,10 +631,12 @@ _matrix_vector_mul_map = {}
 LA_POST_VEC_INTERFACE(GenericVector)
 LA_POST_MAT_INTERFACE(GenericMatrix)
 //LA_VEC_DATA_ACCESS(GenericVector)
+GET_VEC_ITEM_MACRO(GenericVector,Vector)
 
 LA_POST_VEC_INTERFACE(Vector)
 LA_POST_MAT_INTERFACE(Matrix)
 LA_VEC_DATA_ACCESS(Vector)
+GET_VEC_ITEM_MACRO(Vector,Vector)
 
 LA_POST_VEC_INTERFACE(uBLASVector)
 // NOTE: The uBLAS macros need to be run using the whole template type
@@ -434,6 +644,7 @@ LA_POST_VEC_INTERFACE(uBLASVector)
 LA_POST_MAT_INTERFACE(uBLASMatrix<dolfin::ublas_sparse_matrix>)
 LA_POST_MAT_INTERFACE(uBLASMatrix<dolfin::ublas_dense_matrix>)
 LA_VEC_DATA_ACCESS(uBLASVector)
+GET_VEC_ITEM_MACRO(uBLASVector,uBLASVector)
 
 // Run the downcast macro
 DOWN_CAST_MACRO(uBLASVector)
@@ -448,6 +659,7 @@ _matrix_vector_mul_map[uBLASDenseMatrix]  = [uBLASVector]
 #ifdef HAS_PETSC
 LA_POST_VEC_INTERFACE(PETScVector)
 LA_POST_MAT_INTERFACE(PETScMatrix)
+GET_VEC_ITEM_MACRO(PETScVector,PETScVector)
 
 DOWN_CAST_MACRO(PETScVector)
 DOWN_CAST_MACRO(PETScMatrix)
@@ -460,6 +672,7 @@ _matrix_vector_mul_map[PETScMatrix] = [PETScVector]
 #ifdef HAS_TRILINOS
 LA_POST_VEC_INTERFACE(EpetraVector)
 LA_POST_MAT_INTERFACE(EpetraMatrix)
+GET_VEC_ITEM_MACRO(EpetraVector,EpetraVector)
 
 DOWN_CAST_MACRO(EpetraVector)
 DOWN_CAST_MACRO(EpetraMatrix)
@@ -489,6 +702,7 @@ _matrix_vector_mul_map[EpetraMatrix] = [EpetraVector]
 LA_POST_VEC_INTERFACE(MTL4Vector)
 LA_POST_MAT_INTERFACE(MTL4Matrix)
 LA_VEC_DATA_ACCESS(MTL4Vector)
+GET_VEC_ITEM_MACRO(MTL4Vector,MTL4Vector)
 
 DOWN_CAST_MACRO(MTL4Vector)
 DOWN_CAST_MACRO(MTL4Matrix)
